--- a/Klinkby.DwgPreview/Content/App.css
+++ b/Klinkby.DwgPreview/Content/App.css
@@ -1,7 +1,7 @@
 ﻿.dwg-preview {
     width: 100%;
-    max-width: 512px;
-    max-height: 512px;
+    max-width: 384px;
+    max-height: 384px;
 }
 
 #licenseMessage {
@@ -21,3 +21,23 @@
 .license-invalid .app-container {
     display: none;
 }
+
+.dwg-close {
+    clear: both;
+    margin-top: 1em;
+}
+
+pre.csharpcode {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+}
+
+.csharpcode,.csharpcode pre{font-size:small;color:#000;font-family:Consolas,"Courier New",Courier,Monospace}.csharpcode pre{margin:0}.csharpcode .rem{color:green}.csharpcode .kwrd{color:#00f}.csharpcode .str{color:#a31515}.csharpcode .op{color:#0000c0}.csharpcode .preproc{color:#c63}.csharpcode .asp{background-color:#ff0}.csharpcode .html{color:maroon}.csharpcode .attr{color:red}.csharpcode .alt{background-color:#f4f4f4;width:100%;margin:0}.csharpcode .lnum{color:#606060}
